[gd_scene load_steps=5 format=2]

[ext_resource path="res://recursos/fontes/spacefont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://cenas/menus/submenus/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0.0392157, 0.45098, 0.0666667, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="MainMenu" type="VBoxContainer"]
margin_top = 143.0
margin_right = 180.0
margin_bottom = 247.0
theme = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jogar" type="Button" parent="."]
margin_right = 180.0
margin_bottom = 23.0
text = "JOGAR"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComoJogar" type="Button" parent="."]
margin_top = 27.0
margin_right = 180.0
margin_bottom = 50.0
text = "COMO_JOGAR"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configurar" type="Button" parent="."]
margin_top = 54.0
margin_right = 180.0
margin_bottom = 77.0
text = "CONFIGURAR"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sobre" type="Button" parent="."]
margin_top = 81.0
margin_right = 180.0
margin_bottom = 104.0
text = "SOBRE"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Jogar" to="." method="_on_Jogar_button_down"]
[connection signal="button_down" from="ComoJogar" to="." method="_on_Como_Jogar_button_down"]
[connection signal="button_down" from="Configurar" to="." method="_on_Configurar_button_down"]
[connection signal="button_down" from="Sobre" to="." method="_on_Sobre_button_down"]
